# mr-audit

./: .gitignore  CITATION.cff  COVER_LETTER.md  OUTREACH_EMAILS.md  README.md  pyproject.toml
examples/: sklearn_credit_classifier.py  statsmodels_sarimax_macro.py
examples/audit_logs/: credit_classifier.db  sarimax_macro.db
paper/: audit.py  build.sh  main.tex
paper/bib/: references.bib
paper/sections/: 01_introduction.tex  02_regulatory_framework.tex  03_package.tex  04_demonstration.tex  05_discussion.tex  06_reproducibility.tex
src/mr_audit/: __init__.py  cli.py
src/mr_audit/core/: auditable.py  hash.py  schema.py  store.py
src/mr_audit/drift/: __init__.py  input.py  output.py
src/mr_audit/export/: __init__.py  bundle.py
src/mr_audit/replay/: __init__.py  engine.py
studies/: 01_instrument_paper2.py  02_use_cases.py  03_scaling_benchmark.py  04_output_drift_analysis.py  05_adversarial_robustness.py
studies/audit_logs/: instrumentation_log.json
studies/results/: adversarial_summary.json  output_drift_summary.json  scaling_benchmark.json  use_cases_summary.json
tests/: test_auditable.py  test_drift.py  test_export.py  test_hash_chain.py  test_output_drift.py  test_replay.py  test_store.py
